lab3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
      - mydomainitmo.com   
    secretName: react-app-edna-tls 
  rules:
  - host: mydomainitmo.com 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service  
            port:
              number: 8200
